<resources>
    <string name="app_name">WeekSixTaskAndroidSQ009</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_contact">Save Contact</string>

    <string name="add_to_book">Add to book</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="my_database">My Database</string>
    <string name="his_database">His Database</string>
    <string name="billy_banks">Billy Banks</string>
    <string name="_09022332211">09022332211</string>
    <string name="bello_aminu">Bello Aminu</string>
    <string name="_07028771263">07028771263</string>
    <string name="todo">TODO</string>
    <string name="dialogTitle">Delete Contact</string>
    <string name="dialogMessage">Do you wish to delete contact ?</string>
    <string name="my_contacts">My Contacts</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="read_contacts">Read Contacts</string>
    <string name="my_profile">My Profile</string>
    <string name="update">Update</string>

</resources>