<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddContactFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addcontact_recyclerview"
        android:layout_width="0dp"
        android:layout_height="366dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/addcontact_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addcontact_recyclerview" />

    <EditText
        android:id="@+id/addcontact_Phone"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/addcontact_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addcontact_name"
        app:layout_constraintTop_toBottomOf="@+id/addcontact_name" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/addcontact_animation"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/addcontact_Phone"
        app:layout_constraintTop_toBottomOf="@+id/addcontact_Phone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/phone3"
        app:lottie_speed="4" />

    <Button
        android:id="@+id/addcontact_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_to_book"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/addcontact_animation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addcontact_animation"
        app:layout_constraintTop_toTopOf="@+id/addcontact_animation" />


</androidx.constraintlayout.widget.ConstraintLayout>

